# django-jsonapi-framework

./: README.md  pyproject.toml
django_jsonapi_framework/: conf.py  emails.py  exceptions.py  models.py  permissions.py  urls.py  utils.py  views.py
django_jsonapi_framework/auth/: apps.py  conf.py  models.py  permissions.py  utils.py  views.py
django_jsonapi_framework/auth/migrations/: 0001_initial.py
django_jsonapi_framework/migrations/: 0001_initial.py  0002_role_role_unique_key_organization.py
