[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-jsonapi-framework"
version = "0.0.5"
authors = [
  { name="Digital Valley", email="techteam@digitalvalley.nl" }
]
description = "Django JSON:API Framework makes it easier to build Django apps with REST API's that follow the JSON:API specification."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "django",
  "jsonschema"
]

[project.urls]
homepage = "https://django-jsonapi-framework.org/"
